resources/assets/sass/_home.scss
html, body { overflow-x: visible !important; }
/*=============== Writer ===============*/
.Writer { margin: 7em 5em; }

/*=============== Curly Color ===============*/
span.curly { color: #ff00d8; }
span.pipe { color: #54ff00; }

/*=============== Sub nav - sidebar ===============*/
.sub-nav { margin-left: -2em; }

/*=============== navigation ===============*/
.navbar-header {
	margin-left: 5em;

	a {
 	   color: #fff;
	    font-size: 1.4em;

	    &:hover { text-decoration: none; }
	}
}

.navbar-right {
    margin-right: 5em;
}

/*=============== login, register ===============*/
.row-table > [class*="col-"] {
	top: 7em !important;
}

/*=============== dashboard ===============*/
.wrapper {
	height: 100vh !important;
}

@media only screen and (min-width: 768px) {

	.wrapper > section {
	    padding-top: 50px !important;
	    background: #dedede !important;
	}
}

/* @media only screen and (min-width: 768px) {
	.wrapper > section {
	    margin-left: 0 !important;
	    padding: 0 7em;
	}
} */

/*=============== admin ===============*/
button.close {
	position: absolute;
    top: 1em;
    right: 1em;
    font-size: 2em;
}

.Report,
.Edited,
.User,
.Waiting {
    margin-bottom: 5em;
}

/*=============== admin - reporting ===============*/
.articles-content {
    background: #fff;
    padding: 0.1em 1em 1em;
    width: 300px;
    max-width: 300px;
    float: left;
    margin-right: 1em;
    margin-top: 1em;
}

.articles-content h3,
.articles-content p {
    overflow: hidden;
}

.articles-content h3 {
    font-size: 1.4em;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.articles-content p {
    white-space: pre-wrap;
}

.Report table thead th:last-child,
.Edited table thead th:last-child,
.Spun table thead th:last-child,
.Waiting table thead th:last-child {
    // width: 200px;
    // max-width: 200px;
    text-align: center;
}

table { background: #fff; }
table thead th:nth-child(5) { width: 120px; }


/*=============== Admin - table and buttons ===============*/

.Report,
.Edited,
.Waiting,
.Spun,
.DetailTable,
.Search {

    table td:last-child {
        width: 200px;
        max-width: 200px;


        button { width: 90px; }
    }
}

/*=============== Editor - table and buttons ===============*/

.Waiting,
.Edited {

    table td:last-child {
        width: 30px;
    }

    table td:nth-child(4) {
        width: 200px;
    }
}

.articles-to-be-edit,
.articles-edited-this-week {
    table td:last-child {
        width: 100px !important;
    }
}

/*=============== home, home2 ===============*/
.Spintax__result,
.Process__article {
	padding: 1em 2em 2em;
    margin-bottom: 3em;
}

.Spintax__result,
.note-editable.panel-body {
    background: #252525;
    color: #e8e8e8;
    font-size: 1.5em;
    line-height: 1.6em;
    border: 1px solid #413737;
}

.note-editable.panel-body {
    background: none;
    border: none;
}

.Process__article {
    background: #e1f9dd;
    border: 1px solid #d6e6d3;
}

.Word {
	padding: 0 20px;
}

.Word__result {
	width: 100%;
	margin-bottom: 3em;
	overflow-y: hidden;
}

/*=============== summernote ===============*/

mark { background-color: #f9e603 !important; }

.Copyscape__result mark {
	background-color: #F73838 !important;
	color: #fff;
}

div.note-editable p {
	white-space: pre-wrap;
}

